codepkg/objects/F42_Entry__c.object
<CustomObject>
    <description>This object is used to track all F42 Entries into the system. This object captures the entry data made by portal users on the UI. Once submitted this record will span into multiple f42 records and f42 line items that will then be used for invoice generation.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>F42 Entries</relationshipLabel>
        <relationshipName>F42_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entered_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entered By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>F42 Entries</relationshipLabel>
        <relationshipName>F42_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident</label>
        <referenceTo>Incident__c</referenceTo>
        <relationshipLabel>F42 Entries</relationshipLabel>
        <relationshipName>F42_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JSON__c</fullName>
        <description>This field holds the content in json format. This data comes from the UI from F42 Entries made by user</description>
        <encryptionScheme>None</encryptionScheme>
        <label>JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offline_JSON__c</fullName>
        <description>This field stores offline JSON without any modification</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Offline JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Offline</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Online Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Offline Draft</fullName>
                </value>
                <value>
                    <fullName>Caloes Review</fullName>
                </value>
                <value>
                    <fullName>Disregarded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>F42 Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Entered_By__c</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>Incident__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>F42 Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>F42 Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>